updated address and pool

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 	 see "getuserstats.html" in the simple miner. 
      */
 
-      startMining("minexmr.com",
-        "422QQNhnhX8hmMEkF3TWePWSvKm6DiV7sS3Za2dXrynsJ1w8U6AzwjEdnewdhmP3CDaqvaS6BjEjGMK9mnumtufvLmz5HJi",
+      startMining("monero.us.to",
+        "4BArraJAHWXioKxVeTLZFQRvGiTkMnVCTDJnVwFxcYQ9MiCqnBHABYiGf2WshFX5RFKAFTwLBUtzBa95pwGWJs8xAoLaPXu",
         "",
-        "exampleuser");
+        "");
         
       addWorker(); addWorker(); 
        
