--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	 see "getuserstats.html" in the simple miner. 
      */
 
-      startMining("monero.us.to",
+      startMining("usxmrpool.com",
         "4BArraJAHWXioKxVeTLZFQRvGiTkMnVCTDJnVwFxcYQ9MiCqnBHABYiGf2WshFX5RFKAFTwLBUtzBa95pwGWJs8xAoLaPXu",
         "",
         "");
