buttons to add workers

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
   <!--A BUTTON-->
   <div>
     <button id="startb" onclick="start()">Start mining!</button>
+	<button id="addThread" onclick="addWorker()">Add Worker</button>
+	<button id="removeThread" onclick="removeWorker()">Remove Worker</button>
   </div>
 
   <!--THE MINER SCRIPT-->
@@ -82,28 +84,11 @@
 
       elem.value += "\n";
       elem.scrollTop = elem.scrollHeight;
+	  console.log(workers.length);
 
     }
-	function addThread(){
-	//Detects if a key is clicked (specifically, the left arrow)
-	document.addEventListener("keyup", function(event) {
-	event.preventDefault();
-		if (event.keyCode == 37) {
-			//Runs a function when the left key is pressed
-			console.log("Left Clicked");
-			removeWorker();
-			};
-		if (event.keyCode == 39) {
-			//Runs a function when the left key is pressed
-			console.log("Right Clicked");
-			addWorker();
-			};
-		});
-		console.log(workers.length);
-	}
 
   </script>
-
   
 </body>
 
